Working on mobile issues (scaling, slowness, landing)

--- a/mp.css
+++ b/mp.css
@@ -31,12 +31,12 @@ body{
   transition: all .5s;
   display: inline-block;
   position: relative;
-  width: calc(8vw + 1vh);
+  width: calc(6vw + 1vh + 4px);
   padding: 18px;
   top: 3px;
   text-align: center;
   cursor: pointer;
-  font-size: calc(.5vw + 1vh + 10px);
+  font-size: calc(1vw + 1vh + 4px);
 }
 a{
   color: inherit;
@@ -238,8 +238,8 @@ a{
 }
 #songimage{
   transition: all 1s;
-  width: calc(8vw + 36px);
-  height: calc(10vh + 36px);
+  width: calc(6vw + 4vh + 16px);
+  height: calc(8vh + 2vw + 16px);
   position: absolute;
   bottom: 0vh;
   left: 0vw;
@@ -259,20 +259,16 @@ a{
   width: calc(1vw + 2vh + 100px);
   position: absolute;
   left: calc(14vw - 5vh + 16px);
-  bottom: 10vh;
-  font-size: calc(1vw + 2vh + 20px);
-  text-align: center;
-  line-height: 150%;
+  bottom: calc(6vh + 16px);
+  height: calc(1vw + 10vh + 20px);
   cursor: pointer;
 }
 #nextsong{
   width: calc(1vw + 2vh + 100px);
   position: absolute;
   left: calc(24vw + 5vh + 16px);
-  bottom: 10vh;
-  font-size: calc(1vw + 2vh + 20px);
-  text-align: center;
-  line-height: 150%;
+  bottom: calc(6vh + 16px);
+  height: calc(1vw + 10vh + 20px);
   cursor: pointer;
 }
 #songtitle{
